Merged annotated config code from annotated-config branch